Added breathing alarms and air level to HUD
Fixed empty air canister returning no storage capacity
Fixed minor inconsistency in breathing API

--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -498,6 +498,11 @@ warpdrive.beam_frequency.statusLine.valid=Strahlfrequenz %1$d ist gültig.
 warpdrive.beam_frequency.statusLine.invalid=§cStrahlfrequenz %1$d ist ungültig.
 warpdrive.beam_frequency.statusLine.undefined=§7Undefinierte Strahlfrequenz.\n§bNutze eine Stimmgabel§f um die Strahlfrequenz festzulegen.
 
+warpdrive.breathing.alarm=Breathing alarm !!!
+warpdrive.breathing.invalid_setup=No breathing helmet\nor incomplete armor !!!
+warpdrive.breathing.low_reserve=Low air reserve! !!!
+warpdrive.breathing.no_air=No more air! !!!
+
 warpdrive.control_channel.tooltip=Control channel is set to %1$d !!!
 warpdrive.control_channel.get=Control channel %2$d has been retrieved from %1$s !!! 
 warpdrive.control_channel.set=%1$s is now tuned with Control channel %2$d !!!
