--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -498,6 +498,11 @@ warpdrive.beam_frequency.statusLine.valid=Beam frequency %1$d is valid.
 warpdrive.beam_frequency.statusLine.invalid=§cBeam frequency %1$d is invalid.
 warpdrive.beam_frequency.statusLine.undefined=§7Undefined beam frequency.\n§bUse a Tuning fork§r to set it.
 
+warpdrive.breathing.alarm=Breathing alarm
+warpdrive.breathing.invalid_setup=No breathing helmet\nor incomplete armor
+warpdrive.breathing.low_reserve=Low air reserve!
+warpdrive.breathing.no_air=No more air!
+
 warpdrive.control_channel.tooltip=Control channel is set to %1$d
 warpdrive.control_channel.get=Control channel %2$d has been retrieved from %1$s 
 warpdrive.control_channel.set=%1$s is now tuned with Control channel %2$d
