--- a/src/main/resources/assets/warpdrive/lang/fr_FR.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_FR.lang
@@ -154,7 +154,6 @@ item.warpdrive.tool.tuning_fork.black.name=Diapason noir
 item.warpdrive.tool.tuning_fork.tooltip.usage=§bCliques droit sur un block§r pour ajuster ses cristaux\n§bAccroupi§r pour ajuster les cristaux alternatifs
 
 
-tile.warpdrive.passive.air.name=Bloc d'air
 tile.warpdrive.passive.Energized.name=Block energisé
 tile.warpdrive.passive.Gas.name=Bloc de gaz
 tile.warpdrive.passive.IridiumBlock.name=Bloc d'iridium
@@ -163,10 +162,6 @@ tile.warpdrive.passive.Network.name=Bloc de réseau
 tile.warpdrive.passive.Plain.name=Bloc ordinaire
 tile.warpdrive.passive.TransportBeacon.name=Balise de transport
 
-tile.warpdrive.machines.air_generator.name=Générateur d'air
-tile.warpdrive.machines.air_generator1.name=Générateur d'air élémentaire
-tile.warpdrive.machines.air_generator2.name=Générateur d'air avancé
-tile.warpdrive.machines.air_generator3.name=Générateur d'air supérieur
 tile.warpdrive.machines.ChunkLoader.name=Chargeur de chunk
 tile.warpdrive.machines.Laser.name=Laser
 tile.warpdrive.machines.LaserMedium.name=Milieu amplificateur
@@ -201,6 +196,12 @@ tile.warpdrive.atomic.void_shell_plain.name=Coquille sous vide
 tile.warpdrive.atomic.void_shell_plain.tooltip=Fournit 2 canaux de parcours des particules dans un accélérateur.\nSe connecte uniquement horizontalement avec d'autres Coquille sous vide.
 tile.warpdrive.atomic.void_shell_glass.name=Vitre de coquille sous vide
 tile.warpdrive.atomic.void_shell_glass.tooltip=Variante transparente de la Coquille sous vide permettant de voir les particules en mouvement.
+
+tile.warpdrive.breathing.air.name=Bloc d'air
+tile.warpdrive.breathing.air_generator.name=Générateur d'air
+tile.warpdrive.breathing.air_generator1.name=Générateur d'air élémentaire
+tile.warpdrive.breathing.air_generator2.name=Générateur d'air avancé
+tile.warpdrive.breathing.air_generator3.name=Générateur d'air supérieur
 
 tile.warpdrive.building.ShipScanner.name=Scanneur de vaisseau
 
