--- a/src/main/resources/assets/warpdrive/lang/fr_FR.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_FR.lang
@@ -202,6 +202,7 @@ tile.warpdrive.breathing.air_generator.name=Générateur d'air
 tile.warpdrive.breathing.air_generator1.name=Générateur d'air élémentaire
 tile.warpdrive.breathing.air_generator2.name=Générateur d'air avancé
 tile.warpdrive.breathing.air_generator3.name=Générateur d'air supérieur
+tile.warpdrive.breathing.air_shield.name=Bouclier d'air d'énergie
 
 tile.warpdrive.building.ShipScanner.name=Scanneur de vaisseau
 
@@ -300,6 +301,23 @@ tile.warpdrive.hull1.glass.green.name=Vitre de coque élémentaire verte
 tile.warpdrive.hull1.glass.red.name=Vitre de coque élémentaire rouge
 tile.warpdrive.hull1.glass.black.name=Vitre de coque élémentaire noire
 
+tile.warpdrive.hull1.omnipanel.white.name=Omnipanneau de coque élémentaire blanche
+tile.warpdrive.hull1.omnipanel.orange.name=Omnipanneau de coque élémentaire orange
+tile.warpdrive.hull1.omnipanel.magenta.name=Omnipanneau de coque élémentaire magenta
+tile.warpdrive.hull1.omnipanel.lightBlue.name=Omnipanneau de coque élémentaire bleu claire
+tile.warpdrive.hull1.omnipanel.yellow.name=Omnipanneau de coque élémentaire jaune
+tile.warpdrive.hull1.omnipanel.lime.name=Omnipanneau de coque élémentaire citron vert
+tile.warpdrive.hull1.omnipanel.pink.name=Omnipanneau de coque élémentaire rose
+tile.warpdrive.hull1.omnipanel.gray.name=Omnipanneau de coque élémentaire grise
+tile.warpdrive.hull1.omnipanel.silver.name=Omnipanneau de coque élémentaire argentée
+tile.warpdrive.hull1.omnipanel.cyan.name=Omnipanneau de coque élémentaire cyan
+tile.warpdrive.hull1.omnipanel.purple.name=Omnipanneau de coque élémentaire violette
+tile.warpdrive.hull1.omnipanel.blue.name=Omnipanneau de coque élémentaire bleue
+tile.warpdrive.hull1.omnipanel.brown.name=Omnipanneau de coque élémentaire marron
+tile.warpdrive.hull1.omnipanel.green.name=Omnipanneau de coque élémentaire verte
+tile.warpdrive.hull1.omnipanel.red.name=Omnipanneau de coque élémentaire rouge
+tile.warpdrive.hull1.omnipanel.black.name=Omnipanneau de coque élémentaire noire
+
 tile.warpdrive.hull1.slab.white.name=Dalle de coque élémentaire blanche
 tile.warpdrive.hull1.slab.orange.name=Dalle de coque élémentaire orange
 tile.warpdrive.hull1.slab.magenta.name=Dalle de coque élémentaire magenta
@@ -369,6 +387,23 @@ tile.warpdrive.hull2.glass.green.name=Vitre de coque avancée verte
 tile.warpdrive.hull2.glass.red.name=Vitre de coque avancée rouge
 tile.warpdrive.hull2.glass.black.name=Vitre de coque avancée noire
 
+tile.warpdrive.hull2.omnipanel.white.name=Omnipanneau de coque avancée blanche
+tile.warpdrive.hull2.omnipanel.orange.name=Omnipanneau de coque avancée orange
+tile.warpdrive.hull2.omnipanel.magenta.name=Omnipanneau de coque avancée magenta
+tile.warpdrive.hull2.omnipanel.lightBlue.name=Omnipanneau de coque avancée bleu claire
+tile.warpdrive.hull2.omnipanel.yellow.name=Omnipanneau de coque avancée jaune
+tile.warpdrive.hull2.omnipanel.lime.name=Omnipanneau de coque avancée citron vert
+tile.warpdrive.hull2.omnipanel.pink.name=Omnipanneau de coque avancée rose
+tile.warpdrive.hull2.omnipanel.gray.name=Omnipanneau de coque avancée grise
+tile.warpdrive.hull2.omnipanel.silver.name=Omnipanneau de coque avancée argentée
+tile.warpdrive.hull2.omnipanel.cyan.name=Omnipanneau de coque avancée cyan
+tile.warpdrive.hull2.omnipanel.purple.name=Omnipanneau de coque avancée violette
+tile.warpdrive.hull2.omnipanel.blue.name=Omnipanneau de coque avancée bleue
+tile.warpdrive.hull2.omnipanel.brown.name=Omnipanneau de coque avancée marron
+tile.warpdrive.hull2.omnipanel.green.name=Omnipanneau de coque avancée verte
+tile.warpdrive.hull2.omnipanel.red.name=Omnipanneau de coque avancée rouge
+tile.warpdrive.hull2.omnipanel.black.name=Omnipanneau de coque avancée noire
+
 tile.warpdrive.hull2.slab.white.name=Dalle de coque avancée blanche
 tile.warpdrive.hull2.slab.orange.name=Dalle de coque avancée orange
 tile.warpdrive.hull2.slab.magenta.name=Dalle de coque avancée magenta
@@ -437,6 +472,23 @@ tile.warpdrive.hull3.glass.brown.name=Vitre de coque supérieure marron
 tile.warpdrive.hull3.glass.green.name=Vitre de coque supérieure verte
 tile.warpdrive.hull3.glass.red.name=Vitre de coque supérieure rouge
 tile.warpdrive.hull3.glass.black.name=Vitre de coque supérieure noire
+
+tile.warpdrive.hull3.omnipanel.white.name=Omnipanneau de coque supérieure blanche
+tile.warpdrive.hull3.omnipanel.orange.name=Omnipanneau de coque supérieure orange
+tile.warpdrive.hull3.omnipanel.magenta.name=Omnipanneau de coque supérieure magenta
+tile.warpdrive.hull3.omnipanel.lightBlue.name=Omnipanneau de coque supérieure bleu claire
+tile.warpdrive.hull3.omnipanel.yellow.name=Omnipanneau de coque supérieure jaune
+tile.warpdrive.hull3.omnipanel.lime.name=Omnipanneau de coque supérieure citron vert
+tile.warpdrive.hull3.omnipanel.pink.name=Omnipanneau de coque supérieure rose
+tile.warpdrive.hull3.omnipanel.gray.name=Omnipanneau de coque supérieure grise
+tile.warpdrive.hull3.omnipanel.silver.name=Omnipanneau de coque supérieure argentée
+tile.warpdrive.hull3.omnipanel.cyan.name=Omnipanneau de coque supérieure cyan
+tile.warpdrive.hull3.omnipanel.purple.name=Omnipanneau de coque supérieure violette
+tile.warpdrive.hull3.omnipanel.blue.name=Omnipanneau de coque supérieure bleue
+tile.warpdrive.hull3.omnipanel.brown.name=Omnipanneau de coque supérieure marron
+tile.warpdrive.hull3.omnipanel.green.name=Omnipanneau de coque supérieure verte
+tile.warpdrive.hull3.omnipanel.red.name=Omnipanneau de coque supérieure rouge
+tile.warpdrive.hull3.omnipanel.black.name=Omnipanneau de coque supérieure noire
 
 tile.warpdrive.hull3.slab.white.name=Dalle de coque supérieure blanche
 tile.warpdrive.hull3.slab.orange.name=Dalle de coque supérieure orange
